# vcb-launcher

./: .gitignore  Cargo.toml  README.md  build.rs
.github/workflows/: build.yml
docs/: MODDING.md  PATCHER_DESIGN.md
packaging/: vcb-launcher.desktop
src/: archive.rs  bundled.rs  config.rs  gamemods.rs  github.rs  icon.rs  icon_render.rs  install.rs  launch.rs  main.rs  meta.rs  modloader.rs  modmenu.rs  mods.rs  net.rs  patch.rs  pck.rs  pckbuild.rs  projbin.rs  scan.rs  steam.rs  update.rs
