[package]
name = "vcb-launcher"
version = "0.1.0"
edition = "2021"
description = "A small, portable GUI mod launcher for Virtual Circuit Board: swap mod .pck files in and out of a Steam install."
license = "MIT"
repository = "https://github.com/n-popescu/vcb-launcher"

[dependencies]
eframe = { version = "0.27", default-features = false, features = ["glow", "default_fonts"] }
egui = "0.27"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5"

[target.'cfg(windows)'.dependencies]
winreg = "0.52"

# One self-contained, reasonably small release binary.
[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
